--- a/Conection/.env
+++ b/Conection/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://tutugomesarthur:iWwGGXPeP62qxjJT@conversorcriptomoedas.newsgcc.mongodb.net/ConversorCriptomoedas?retryWrites=true&w=majority&appName=ConversorCriptomoedas
+MONGO_URI=
 
 JWT_SECRET=
